Add logs subscription filters on 5/28-29

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -74,6 +74,9 @@ Parameters:
         logs:Describe*,
         logs:FilterLogEvents,
         logs:TestMetricFilter,
+        logs:PutSubscriptionFilter,
+        logs:DeleteSubscriptionFilter,
+        logs:DescribeSubscriptionFilters,
         rds:Describe*,
         rds:List*,
         redshift:DescribeClusters,
