Change support on 10/29-30

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -92,7 +92,9 @@ Parameters:
         sns:List*,
         sns:Publish,
         sqs:ListQueues,
-        support:*,
+        support:DescribeTrustedAdvisorChecks,
+        support:RefreshTrustedAdvisorCheck,
+        support:DescribeTrustedAdvisorCheckResult,
         tag:GetResources,
         tag:GetTagKeys,
         tag:GetTagValues
