Add apigateway:GET on 12/19-20

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -34,6 +34,7 @@ Parameters:
   PermissionsFull:
     # Delete double quotes(") after copy & paste from doc (#installation)
     Default: >-
+        apigateway:GET,
         autoscaling:Describe*,
         budgets:ViewBudget,
         cloudfront:GetDistributionConfig,
