Change support on 12/21-22

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -93,9 +93,7 @@ Parameters:
         sns:List*,
         sns:Publish,
         sqs:ListQueues,
-        support:DescribeTrustedAdvisorChecks,
-        support:RefreshTrustedAdvisorCheck,
-        support:DescribeTrustedAdvisorCheckResult,
+        support:*,
         tag:GetResources,
         tag:GetTagKeys,
         tag:GetTagValues,
