Add states on 2/05-06

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -90,6 +90,8 @@ Parameters:
         sns:List*,
         sns:Publish,
         sqs:ListQueues,
+        states:ListStateMachines,
+        states:DescribeStateMachine,
         support:*,
         tag:GetResources,
         tag:GetTagKeys,
