Add elasticfilesystem:DescribeAccessPoints on 6/19-20

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -56,6 +56,7 @@ Parameters:
         elasticache:List*,
         elasticfilesystem:DescribeFileSystems,
         elasticfilesystem:DescribeTags,
+        elasticfilesystem:DescribeAccessPoints,
         elasticloadbalancing:Describe*,
         elasticmapreduce:List*,
         elasticmapreduce:Describe*,
