Change logs on 9/9

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -72,10 +72,13 @@ Parameters:
         lambda:GetPolicy,
         lambda:List*,
         lambda:RemovePermission,
-        logs:TestMetricFilter,
-        logs:PutSubscriptionFilter,
         logs:DeleteSubscriptionFilter,
+        logs:DescribeLogGroups,
+        logs:DescribeLogStreams,
         logs:DescribeSubscriptionFilters,
+        logs:FilterLogEvents,
+        logs:PutSubscriptionFilter,
+        logs:TestMetricFilter,
         rds:Describe*,
         rds:List*,
         redshift:DescribeClusters,
