Add cloudtrail:LookupEvents on 10/31

--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -41,6 +41,7 @@ Parameters:
         cloudfront:ListDistributions,
         cloudtrail:DescribeTrails,
         cloudtrail:GetTrailStatus,
+        cloudtrail:LookupEvents,
         cloudwatch:Describe*,
         cloudwatch:Get*,
         cloudwatch:List*,
