--- a/IAM/DatadogAWSIntegrationRole.template.yaml
+++ b/IAM/DatadogAWSIntegrationRole.template.yaml
@@ -64,15 +64,15 @@ Parameters:
         es:ListTags,
         es:ListDomainNames,
         es:DescribeElasticsearchDomains,
+        fsx:DescribeFileSystems,
+        fsx:ListTagsForResource,
         health:DescribeEvents,
         health:DescribeEventDetails,
         health:DescribeAffectedEntities,
         kinesis:List*,
         kinesis:Describe*,
-        lambda:AddPermission,
         lambda:GetPolicy,
         lambda:List*,
-        lambda:RemovePermission,
         logs:DeleteSubscriptionFilter,
         logs:DescribeLogGroups,
         logs:DescribeLogStreams,
